JumpScript/tests/baselines/reference/exportAlreadySeen.errors.txt
tests/cases/compiler/exportAlreadySeen.jump(2,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(3,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(5,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(6,16): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(7,16): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(12,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(13,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(15,12): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(16,16): error TS1030: 'export' modifier already seen.
tests/cases/compiler/exportAlreadySeen.jump(17,16): error TS1030: 'export' modifier already seen.


==== tests/cases/compiler/exportAlreadySeen.jump (10 errors) ====
    module M {
        export export var x = 1;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        export export function f() { }
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }  
    }
    
    declare module A {
        export export var x;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        export export function f()
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }
    }